# Wankel

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  Build.lua  CLAUDE.md  CMakeLists.txt  CmakeLists.txt  DirStructure.txt  LICENSE  README.md  THIRD_PARTY_NOTICES.md  WankelExternal.lua
.claude/skills/cr/: SKILL.md
.claude/skills/run/: SKILL.md
CameraApp/: CMakeLists.txt  CameraApp.cpp  build.sh  run.sh
CubeApp/: CMakeLists.txt  CubeApp.cpp  build.bat  build.sh  run.bat  run.sh
Documents/: DirStructure.txt  TODO.md  WankelDoc.tex  report.md
Sandbox/: Build-Sandbox.lua  CMakeLists.txt  PLYLoader.h  SandboxApp.cpp  SandboxLayer.cpp  SandboxLayer.h  TriangleApp.cpp  br.sh  build.bat  build.sh  buildSandbox.sh  cube.h  imgui.ini  main.cpp  run.bat  run.sh  runGDB.sh  triangle.h
Sandbox/Assets/Mesh/: Ship02.ply  ShipGrey.ply
Sandbox/Source/: Sandbox.cpp
Sandbox/shaders/: cube.frag  cube.vert
Sandbox/src/: MeshLoader.cpp  MeshLoader.h  PLYLoader.h  Player.cpp  Player.h  SandboxApp.cpp  SandboxLayer.cpp  SandboxLayer.h  cube.h  plate.h  triangle.h
Sandbox/src/Assets/Mesh/: AK74_IRONS.blend  AK74_IRONS.ply  Box.blend  Box.ply  Cube100.blend  Cube100.blend1  Cube100.ply  Flat1000m.blend  Flat1000m.blend1  Flat1000m.ply  Flat100m.blend  Flat100m.blend1  Flat100m.ply  Flat200m.blend  Flat200m.blend1  Flat200m.ply  Karachi.blend  Karachi.blend1  Karachi.ply  PlayerHead01.blend  PlayerHead01.blend1  PlayerHead01.glb  PlayerHead01.ply  PlayerLeg01.blend  PlayerLeg01.blend1  PlayerLeg01.glb  PlayerLeg01.ply  Rolling1000m.blend  Rolling1000m.blend1  Rolling1000m.ply  Rolling200m.blend  Rolling200m.blend1  Rolling200m.ply  SHIP01.ply  SHIP04.blend  SHIP04.ply  SHIP05.blend  SHIP05.blend1  SHIP05.ply  SK_Ship.blend  (+13 more)
Sandbox/src/Debug/: AnimationDebugPanel.cpp  AnimationDebugPanel.h  ColliderDebugDraw.cpp  ColliderDebugDraw.h  DebufOverlay.cpp  DebugOverlay.cpp  DebugOverlay.h  SecondOrderPreview.cpp  SecondOrderPreview.h
Sandbox/src/Entities/: EnemyFactory.cpp  EnemyFactory.h  PlayerFactory.cpp  PlayerFactory.h  WorldFactory.cpp  WorldFactory.h
Sandbox/src/Systems/: PlayerInputSystem.cpp  PlayerInputSystem.h
Sandbox/src/Terrain/: AsteroidGenerator.h  SplineCarver.h  SplineGenerator.h
Sandbox/src/shaders/: cube.frag  cube.vert
Triangle/: CMakeLists.txt  TriangleApp.cpp  build.sh  imgui.ini  run.sh
Wankel/: Build-Wankel.lua
Wankel-App/: Build-Wankel-App.lua
Wankel-App/Source/: Wankel-App.cpp
Wankel/Source/Wankel/: Application.cpp  Application.h  Core.h  EntryPoint.h  Wankel.cpp  Wankel.h
Wankel/Source/Wankel/Core/: Application.cpp  Application.h  EntryPoint.h  Image.cpp  Image.h  Layer.h  Random.cpp  Random.h  Timer.h
Wankel/Source/Wankel/Input/: Input.cpp  Input.h  KeyCodes.h
Wankel/Source/Wankel/Renderer/: Camera.cpp  Camera.h  Ray.h  Renderer.cpp  Renderer.h  Triangle.h
Wankel/Source/Wankel/Scene/: Scene.h
cmake/: FetchGLAD.cmake  imgui.cmake
sandbox/: CmakeLists.txt
sandbox/src/: main.cpp
scripts/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  Wankel.vcxproj  Wankel.vcxproj.filters  WankelEngine.sln  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  bc.sh  build-all.sh  build.bat  build.sh  bwsr.sh  format-check.sh  format.sh  imgui.vcxproj  imgui.vcxproj.filters  lint.sh  run-sandbox.sh  treeDir.sh
src/: Wankel.h  wkpch.cpp  wkpch.h
src/Wankel/Assets/: AssetManager.cpp  AssetManager.h  GltfLoader.cpp  GltfLoader.h  MeshLoader.cpp  MeshLoader.h  MeshUtils.cpp  MeshUtils.h  PLYLoader.cpp  PLYLoader.h
src/Wankel/Audio/: AudioClip.cpp  AudioClip.h  AudioSystem.cpp  AudioSystem.h
src/Wankel/Core/: Application.cpp  Application.h  Assert.h  Base.h  ControllerCodes.h  ControllerInput.cpp  ControllerInput.h  Engine.cpp  Engine.h  EntryPoint.h  GamepadCodes.h  Input.h  InputSystem.cpp  InputSystem.h  KeyCodes.h  Layer.cpp  Layer.h  LayerStack.cpp  LayerStack.h  Log.cpp  Log.h  MouseCodes.h  PlatformDetection.h  Time.cpp  Time.h  Window.cpp  Window.h
src/Wankel/Core/Events/: ApplicationEvent.h  ControllerAxisEvent.h  ControllerButtonEvent.h  ControllerConnectionEvent.h  ControllerEvent.h  Event.h  KeyEvent.h  MouseEvent.h
src/Wankel/Core/ImGui/: ImGuiLayer.cpp  ImGuiLayer.h
src/Wankel/Core/Platform/Linux/: LinuxInput.cpp  LinuxWindow.cpp  LinuxWindow.h
src/Wankel/Core/Platform/Windows/: WindowsInput.cpp  WindowsWindow.cpp  WindowsWindow.h
src/Wankel/ECS/: Components.h  Entity.h  MotionProfile.h  Scene.cpp  Scene.h
src/Wankel/ECS/Components/: AnimationComponents.h  GameplayComponents.h  HiearchyComponents.h  InputComponents.h  MotionProfile.h  PhysicsComponents.h  RenderComponents.h  TransformComponents.h
src/Wankel/ECS/Systems/: CameraSystem.cpp  CameraSystem.h  KinematicsSystem.cpp  KinematicsSystem.h  PlayerControllerSystem.cpp  PlayerControllerSystem.h  ProceduralAnimationSystem.cpp  ProceduralAnimationSystem.h  TransformSystem.cpp  TransformSystem.h
src/Wankel/Math/: Math.h  Noise.cpp  Noise.h  Polygonize.h  Random.cpp  Random.h  SecondOrderDynamics.cpp  SecondOrderDynamics.h  Spline3D.h
src/Wankel/Physics/Collision/: ColliderType.h  CollisionDispatcher.cpp  CollisionDispatcher.h  CollisionManifold.h
src/Wankel/Physics/Collision/BroadPhase/: AABB.h  SpatialHashGrid.h
src/Wankel/Physics/Collision/NarrowPhase/: Capsule.h  (+13 more)
src/Wankel/Physics/Raycast/: Ray.h  Raycast.cpp  Raycast.h  RaycastHit.h
src/Wankel/Physics/Systems/: PhysicsSystem.cpp  PhysicsSystem.h
src/Wankel/Platform/Linux/: LinuxInput.cpp  LinuxWindow.cpp  LinuxWindow.h
src/Wankel/Platform/Windows/: WindowsInput.cpp  WindowsWindow.cpp  WindowsWindow.h
src/Wankel/Renderer/: Buffer.cpp  Buffer.h  Camera.cpp  Camera.h  CameraController.cpp  CameraController.h  DebugDraw.h  Font.cpp  Font.h  IndexBuffer.cpp  IndexBuffer.h  Mesh.cpp  Mesh.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  VertexArray.cpp  VertexArray.h  VertexBufferLayout.h
src/Wankel/Renderer/shaders/: debug.frag  debug.vert  text.frag  text.vert
src/Wankel/Terrain/: MarchingCubes.h  VoxelDensityField.h
src/core/: Wankel.cpp
src/include/Wankel/: Wankel.h
